--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,7 +24,8 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
-    - name: Checkout code
+    -
+      name: Checkout
       uses: actions/checkout@v2
     -
       name: Set up QEMU
@@ -34,14 +35,14 @@ jobs:
       uses: docker/setup-buildx-action@v1
     -
       name: Login to DockerHub
-      uses: docker/login-action@v1 
+      uses: docker/login-action@v1
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
     -
       name: Build and push
-      id: docker_build
       uses: docker/build-push-action@v2
       with:
+        context: .
         push: true
-        tags: upgradead/ivan_cayabyab_demo
+        tags: upgradead/ivan_cayabyab_demo:latest
