--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,22 +24,10 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
-    -
-      name: Set up QEMU
-      uses: docker/setup-qemu-action@v1
-    -
-      name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
-    -
-      name: Login to DockerHub
-      uses: docker/login-action@v1 
+    - uses: actions/checkout@v2  
+    - name: Publish to Registry
+      uses: HurricanKai/Publish-Docker-Github-Action@master
       with:
+        name: upgradead/ivan_cayabyab_demo
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-    -
-      name: Build and push
-      id: docker_build
-      uses: docker/build-push-action@v2
-      with:
-        push: true
-        tags: upgradead/ivan_cayabyab_demo:latest
